1対1のメッセージ機能実装

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,13 @@
 <h2>ユーザー</h2>
 
 <% @users.each do |user| %>
-  <%= user.name %>
-  <%= user.email %>
-  <%= link_to "詳細", user_path(user.id) %>
-  <%= render 'follow_form', user: user %>
+  <% if user.id != current_user.id %>
+    <li>
+      <div class="item">
+        <%= link_to user.name, user %>
+        <%= link_to 'メッセージ', conversations_path(sender_id: current_user.id, recipient_id: user.id), method: :post %>
+      </div>
+    </li>
+    <li><%= render 'follow_form', user: user %></li>
+  <% end %>
 <% end %>
